<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".activities.SearchSalesActivity">


    <com.rolnik.alcoholapp.views.CustomProgressBar
        android:id="@+id/customProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/searchRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/alcoholName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/sortRoot"
            android:queryHint="@string/alcohol_name" />

        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/refreshLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:padding="5dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alcoholName">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/sales"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v4.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/sortRoot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/border_rectangle_button"
            android:backgroundTint="@color/lightSalomon"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/sortButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:contentDescription="@string/sort"
                android:onClick="showSorts"
                app:srcCompat="@drawable/sort" />

            <ImageButton
                android:id="@+id/sortAZ"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:contentDescription="@string/name_sort_asc"
                android:onClick="sortNameAsc"
                android:visibility="gone"
                app:srcCompat="@drawable/sort_az" />

            <ImageButton
                android:id="@+id/sortZA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:contentDescription="@string/name_sort_desc"
                android:onClick="sortNameDesc"
                android:visibility="gone"
                app:srcCompat="@drawable/sort_za" />

            <ImageButton
                android:id="@+id/sort19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:contentDescription="@string/price_sort_asc"
                android:onClick="priceSortAsc"
                android:visibility="gone"
                app:srcCompat="@drawable/sort19" />

            <ImageButton
                android:id="@+id/sort91"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_rectangle_button"
                android:backgroundTint="@color/lightSalomon"
                android:contentDescription="@string/price_sort_desc"
                android:onClick="priceSortDesc"
                android:visibility="gone"
                app:srcCompat="@drawable/sort91" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>


</android.support.constraint.ConstraintLayout>