<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/logoutButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:padding="0dp"
        android:clickable="true"
        android:focusable="true"
        android:onClick="logOut"
        app:backgroundTint="@color/lightSalomon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logout" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightSalomon"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/welcome"
            android:textAlignment="textStart"
            android:textColor="@color/grey" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/grey"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:tint="@color/lightSalomon"
                app:srcCompat="@drawable/wine_menu" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/arrow_right_salomon"
                android:drawableTint="@color/lightSalomon"
                android:onClick="searchButtonOnClick"
                android:text="@string/search_sales"
                android:textColor="@color/lightSalomon"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeMaxTextSize="25sp"
                app:autoSizeStepGranularity="1sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/lightSalomon"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:tint="@color/grey"
                app:srcCompat="@drawable/beer_menu"
                />

            <Button
                android:id="@+id/addButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/arrow_right_dark"
                android:onClick="addButtonOnClick"
                android:text="@string/add_sale"
                android:textColor="@color/grey"
                android:singleLine="true"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeMaxTextSize="25sp"
                app:autoSizeStepGranularity="1sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.33"
            android:background="@color/grey"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:tint="@color/lightSalomon"
                app:srcCompat="@drawable/vodka_menu" />

            <Button
                android:id="@+id/mySalesButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:onClick="mySalesButtonOnClick"
                android:background="@color/transparent"
                android:drawableEnd="@drawable/arrow_right_salomon"
                android:drawableTint="@color/lightSalomon"
                android:text="@string/my_sales"
                android:textColor="@color/lightSalomon"
                app:autoSizeTextType="uniform"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeMaxTextSize="25sp"
                app:autoSizeStepGranularity="1sp"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>